syntax = "proto3";

package berty.protocolmodel;

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "berty.tech/go/internal/protocoldb";

option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;

// GroupInfo is the internal version of bertyprotocol.GroupInfo and should stay in sync
message GroupInfo { // group clashes with reserved SQL keyword
  enum GroupAudience {
    Undefined = 0;
    OneToOne = 1;
    Group = 2;
    Self = 3;
  }

  // Fields
  // - Group details/meta

  bytes group_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes group_signing_key = 2;
  bytes metadata = 3;
  GroupAudience audience = 4 [(gogoproto.moretags) = "gorm:\"index\""];
  uint32 version = 5;

  // - Own secrets

  bytes self_priv_key_account = 6;
  bytes self_priv_key_device = 7;
  bytes self_inviter_pub_key = 8;
  bytes inviter_contact_pub_key = 9;

  // - OrbitDB current log positions

  bytes orbitdb_current_cid_message = 10 [(gogoproto.customname) = "OrbitDBCurrentCIDMessage"];
  bytes orbitdb_current_cid_secret = 11 [(gogoproto.customname) = "OrbitDBCurrentCIDSecret"];
  bytes orbitdb_current_cid_setting = 12 [(gogoproto.customname) = "OrbitDBCurrentCIDSetting"];
  bytes orbitdb_current_cid_member = 13 [(gogoproto.customname) = "OrbitDBCurrentCIDMember"];

  // Relation

  repeated GroupMember members = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:group_pub_key;PRELOAD:false\""];
  Contact inviter = 81 [(gogoproto.moretags) = "gorm:\"foreignkey:inviter_contact_pub_key;PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message GroupIncomingRequest {
  // Fields

  bytes group_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes inviter_member_pub_key = 2;
  bytes invitation_sig = 3;
  bytes invitation_priv_key = 4;
  bytes group_signing_key = 5;
  bytes group_version = 6;
  bytes essential_metadata = 7;
  bytes inviter_contact_pub_key = 9;

  // Relations

  Contact inviter_contact = 8 [(gogoproto.moretags) = "gorm:\"foreignkey:inviter_contact_pub_key;PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// GroupMember is the internal version of bertyprotocol.GroupMember and should stay in sync
message GroupMember {
  // Fields

  bytes group_member_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes group_pub_key = 2 [(gogoproto.moretags) = "gorm:\"not null\""];
  bytes inviter_pub_key = 3; // Will be null for first member of the group
  bytes contact_account_pub_key = 4;
  bytes contact_account_binding_proof = 5;
  bytes metadata = 6;

  // Relations

  repeated GroupMemberDevice devices = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:group_member_pub_key;PRELOAD:false\""];
  GroupInfo group_info = 81 [(gogoproto.moretags) = "gorm:\"foreignkey:group_pub_key;PRELOAD:false\"", (gogoproto.nullable) = false];
  GroupMember inviter = 82 [(gogoproto.moretags) = "gorm:\"foreignkey:inviter_pub_key;PRELOAD:false\""];
  Contact contact = 83 [(gogoproto.moretags) = "gorm:\"foreignkey:contact_account_pub_key;PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message GroupMemberDevice {
  // Fields

  bytes group_member_device_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes group_member_pub_key = 2;
  bytes derivation_state = 3;
  uint64 derivation_counter = 4;
  bytes derivation_next_hotp = 5 [(gogoproto.moretags) = "gorm:\"index\""];

  // Relations

  GroupMember group_member = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:group_member_pub_key;PRELOAD:false\"", (gogoproto.nullable) = false];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// Contact is the internal version of bertyprotocol.Contact and should stay in sync
message Contact {
  enum TrustLevel {
    Unknown = 0;
    Untrusted = 1;
    Accepted = 2;
    Trusted = 3;
    UltimateTrust = 4;
  }

  // Fields

  bytes account_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes one_to_one_group_pub_key = 2;
  bytes binder_pub_key = 3;
  TrustLevel trust_level = 4 [(gogoproto.moretags) = "gorm:\"index\""];
  bytes metadata = 5;
  bool blocked = 6;

  // Relations

  GroupInfo one_to_one_group = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:group_pub_key:PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message Message {
  // Fields

  bytes group_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes entry_cid = 2 [(gogoproto.moretags) = "gorm:\"index\""];
  bytes message_key = 3;
  bytes group_member_device_pub_key = 4;

  // Relations

  GroupMemberDevice device = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:group_member_device_pub_key;PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message MyselfAccount {
  // Fields

  bytes account_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes account_binding_priv_key = 2;
  bytes shared_secret = 3;
  bytes public_rendezvous_point_seed = 4;
  bool public_rendezvous_point_enabled = 5;
  bytes sig_chain = 6;

  // Relations

  repeated MyselfDevice devices = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:account_pub_key;PRELOAD:false\""];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message MyselfDevice {
  // Fields

  bytes device_pub_key = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
  bytes device_priv_key = 2;
  bytes account_pub_key = 3;

  // Relations

  MyselfAccount account = 80 [(gogoproto.moretags) = "gorm:\"foreignkey:account_pub_key;PRELOAD:false\"", (gogoproto.nullable) = false];

  // GORM meta

  google.protobuf.Timestamp created_at = 98 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 99 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}
